crates/function-metrics/tests/ui/fail/track_caller.stderr
error: `function_metrics` does not support `#[track_caller]`; instrumentation would change caller locations
 --> tests/ui/fail/track_caller.rs:4:1
  |
4 | #[track_caller]
  | ^^^^^^^^^^^^^^^
